jvm 55%